force-app/main/default/objects/Trial_Survey__c/Trial_Survey__c.object-meta.xml
<CustomObject>
    <label>Trial Survey</label>
    <nameField>
        <displayFormat>TS-{000}</displayFormat>
        <label>Trial Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>