force-app/main/default/objects/Trial_Survey__c/fields/Active_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Active_After_Days__c</fullName>
    <description>Days</description>
    <label>Number of Days Active after Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>