force-app/main/default/objects/Trial_Survey__c/fields/Active_On_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_On_Status__c</fullName>
    <label>Active on status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Sent to PI</fullName>
            </value>
            <value>
                <fullName>Referral Accepted</fullName>
            </value>
            <value>
                <fullName>Contact Attempt In Progress</fullName>
            </value>
            <value>
                <fullName>Contact Successful</fullName>
            </value>
            <value>
                <fullName>Eligibility Passed</fullName>
            </value>
            <value>
                <fullName>Screening In Progress</fullName>
            </value>
            <value>
                <fullName>Screening Complete</fullName>
            </value>
            <value>
                <fullName>Enrollment Success</fullName>
            </value>
            <value>
                <fullName>Treatment Period Started</fullName>
            </value>
            <value>
                <fullName>Follow-Up Period Started</fullName>
            </value>
            <value>
                <fullName>Participation Complete</fullName>
            </value>
            <value>
                <fullName>Trial Complete</fullName>
            </value>
            <value>
                <fullName>Drop Out</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
                <isActive>false</isActive>
                <label>Enrolled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>