force-app/main/default/objects/Trial_Survey__c/fields/Clinical_Trial_Profile__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Profile__c</fullName>
    <label>Clinical Trial Profile</label>
    <referenceTo>Clinical_Trial_Profile__c</referenceTo>
    <relationshipLabel>Trial Surveys</relationshipLabel>
    <relationshipName>Trial_Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>