force-app/main/default/objects/Trial_Survey__c/fields/Display_in_UI__c.field-meta.xml
<CustomField>
    <fullName>Display_in_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>By checking this, Survey due date will be displayed to users.</inlineHelpText>
    <label>Display date in UI</label>
    <type>Checkbox</type>
</CustomField>