force-app/main/default/objects/Trial_Survey__c/fields/Expires_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Expires_After_Days__c</fullName>
    <description>Task expires</description>
    <label>Expires after (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>