force-app/main/default/objects/Trial_Survey__c/fields/Is_Midpoint__c.field-meta.xml
<CustomField>
    <fullName>Is_Midpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Survey tasks will expire when the Participants status is changed to: Drop Out, Trial Complete or Participation Complete</inlineHelpText>
    <label>Expire in Alumni View</label>
    <type>Checkbox</type>
</CustomField>