force-app/main/default/objects/Trial_Survey__c/fields/Is_Recurrence_Survey__c.field-meta.xml
<CustomField>
    <fullName>Is_Recurrence_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurrence Survey</label>
    <type>Checkbox</type>
</CustomField>