force-app/main/default/objects/Trial_Survey__c/fields/Last_Occurrence_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Last_Occurrence_Reminder__c</fullName>
    <label>Last Occurrence Reminder</label>
    <type>Date</type>
</CustomField>