force-app/main/default/objects/Trial_Survey__c/fields/Next_Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurrence_Date__c</fullName>
    <label>Next Occurrence Date</label>
    <type>Date</type>
</CustomField>