force-app/main/default/objects/Trial_Survey__c/fields/Next_Occurrence_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Occurrence_Reminder__c</fullName>
    <label>Next Occurrence Reminder</label>
    <type>Date</type>
</CustomField>