force-app/main/default/objects/Trial_Survey__c/fields/Next_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Task_Due_Date__c</fullName>
    <label>Next Task Due Date</label>
    <type>Date</type>
</CustomField>