force-app/main/default/objects/Trial_Survey__c/fields/Number_of_occurrences__c.field-meta.xml
<CustomField>
    <fullName>Number_of_occurrences__c</fullName>
    <description>Count Number of Occurrences</description>
    <label>Number of occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>