force-app/main/default/objects/Trial_Survey__c/fields/Recurrence_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Frequency__c</fullName>
    <label>Recurrence Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>