force-app/main/default/objects/Trial_Survey__c/fields/Reminder_in_days_before_the_end_date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_in_days_before_the_end_date__c</fullName>
    <description>Days</description>
    <label>Reminder(in days) before the end date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>