force-app/main/default/objects/Trial_Survey__c/fields/Reminder_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reminder Schedule</label>
    <referenceTo>Reminder_Schedule__c</referenceTo>
    <relationshipLabel>Trial Surveys</relationshipLabel>
    <relationshipName>Trial_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>