force-app/main/default/objects/Trial_Survey__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Survey</referenceTo>
    <relationshipLabel>Trial Surveys</relationshipLabel>
    <relationshipName>Trial_Surveys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>