force-app/main/default/objects/Trial_Survey__c/fields/Survey_end_date__c.field-meta.xml
<CustomField>
    <fullName>Survey_end_date__c</fullName>
    <label>Survey end date</label>
    <type>Date</type>
</CustomField>