force-app/main/default/objects/Trial_Survey__c/fields/Survey_start_date__c.field-meta.xml
<CustomField>
    <fullName>Survey_start_date__c</fullName>
    <label>Survey start date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>