force-app/main/default/objects/Trial_Survey__c/fields/Visible_For__c.field-meta.xml
<CustomField>
    <fullName>Visible_For__c</fullName>
    <label>Visible for</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Participant</label>
            </value>
            <value>
                <fullName>Delegates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>