force-app/main/default/objects/Trial_Survey__c/fields/Visible_To_Delegates__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_Delegates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to delegates</label>
    <type>Checkbox</type>
</CustomField>