force-app/main/default/objects/Trial_Survey__c/fields/Whose_response_needed__c.field-meta.xml
<CustomField>
    <fullName>Whose_response_needed__c</fullName>
    <inlineHelpText>Please select whose responses is needed for this Survey</inlineHelpText>
    <label>Whose response needed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient only</fullName>
            </value>
            <value>
                <fullName>Each Delegate</fullName>
            </value>
            <value>
                <fullName>Patient or any Delegate</fullName>
            </value>
            <value>
                <fullName>Any Delegate</fullName>
            </value>
            <value>
                <fullName>Patient and each Delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>