force-app/main/default/objects/Trial_Survey__c/recordTypes/Status_based.recordType-meta.xml
<RecordType>
    <fullName>Status_based</fullName>
    <active>true</active>
    <label>Status based</label>
</RecordType>