force-app/main/default/objects/Trial_Survey__c/recordTypes/Time_based.recordType-meta.xml
<RecordType>
    <fullName>Time_based</fullName>
    <active>true</active>
    <label>Time based</label>
</RecordType>