force-app/main/default/objects/Trial_Survey__c/validationRules/Active_Days_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Days_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(NOT( ISBLANK(  Active_After_Days__c  ) ), 
 Active_After_Days__c &lt; 0 
)</errorConditionFormula>
    <errorMessage>Please enter zero or positive value on &quot;Number of Days Active after Enrollment&quot;</errorMessage>
</ValidationRule>