force-app/main/default/objects/Trial_Survey__c/validationRules/Expire_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Expire_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND
   (NOT( ISBLANK( Expires_After_Days__c ) ),
    Expires_After_Days__c &lt; 0
   )</errorConditionFormula>
    <errorMessage>Please enter zero or positive value on &quot;Expires after (days)&quot;</errorMessage>
</ValidationRule>