force-app/main/default/objects/Trial_Survey__c/validationRules/Not_Negative.validationRule-meta.xml
<ValidationRule>
   <fullName>Not_Negative</fullName>
   <active>true</active>
   <errorConditionFormula>OR(
AND
   (NOT( ISBLANK( Reminder_in_days_before_the_end_date__c ) ),
    Reminder_in_days_before_the_end_date__c &lt; 0
   ),
AND
   (NOT( ISBLANK( Active_After_Days__c ) ),
    Active_After_Days__c &lt; 0
   ),
AND
   (NOT( ISBLANK( Expires_After_Days__c ) ),
    Expires_After_Days__c &lt; 0
   )
)</errorConditionFormula>
   <errorMessage>Please enter zero or positive values for number fields</errorMessage>
</ValidationRule>