force-app/main/default/objects/Trial_Survey__c/validationRules/Time_Base_Day_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Base_Day_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.DeveloperName = &#39;Time_based&#39;, 
ISBLANK(Active_After_Days__c) 
)</errorConditionFormula>
    <errorMessage>In time based Trial Survey field &quot;Active after days&quot; should not be blank</errorMessage>
</ValidationRule>