force-app/main/default/objects/Trial_Survey__c/validationRules/User_Cannot_Edit_TS_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Cannot_Edit_TS_Created</fullName>
    <active>true</active>
    <errorConditionFormula>OR   (
   ISCHANGED ( Active_After_Days__c ) ,
   ISCHANGED ( Active_On_Status__c )  ,
    ISCHANGED (  Expires_After_Days__c ),
    ISCHANGED (   Reminder_Schedule__c ),
    ISCHANGED (   Whose_response_needed__c )
)</errorConditionFormula>
    <errorMessage>Trial Survey is not available for editing. To make any changes, please, delete this Trial Survey and create a new one instead</errorMessage>
</ValidationRule>